--- a/templates/index.html
+++ b/templates/index.html
@@ -48,19 +48,19 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class = "img-responsive" src="Home.jpg" alt="Home2.jpg">
+          <img class = "img-responsive" src="Home.jpg" alt="static/Home2.jpg">
         </div>
 
         <div class="item">
-          <img class = "img-responsive" src="Home3.jpg" alt="Home2.jpg">
+          <img class = "img-responsive" src="Home3.jpg" alt="static/Home2.jpg">
         </div>
 
         <div class="item">
-          <img class = "img-responsive" src="Home.jpg" alt="Home2.jpg">
+          <img class = "img-responsive" src="Home.jpg" alt="static/Home2.jpg">
         </div>
 
         <div class="item">
-          <img class = "img-responsive" src="Home.jpg" alt="Home2.jpg">
+          <img class = "img-responsive" src="Home.jpg" alt="static/Home2.jpg">
         </div>
       </div>
 
@@ -83,7 +83,7 @@
   <p>I am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fat.</p>
   <br>
   <p algin = "center"> <strong> Alexander Park <strong> </p>
-  <img src = "AlexPark.jpg" class = "img-circle" height = "200" width = "200"> 
+  <img src = "static/AlexPark.jpg" class = "img-circle" height = "200" width = "200"> 
 
 </div>
 
@@ -94,19 +94,19 @@
       <div class = "row">
         <div class = "col-sm-4">
           <p align = "center"><strong>Landscape<strong></p><br>
-            <img src = "Home.jpg" class = "img-circle portfolio">
+            <img src = "static/Home.jpg" class = "img-circle portfolio">
           <p align = "center"><strong>UC Davis<strong></p><br>
-            <img src = "Home.jpg" class = "img-circle portfolio">
+            <img src = "static/Home.jpg" class = "img-circle portfolio">
         </div>
         <div class = "col-sm-4">
           <p align = "center"><strong>Portraits<strong></p><br>
-            <img src = "Home.jpg" class = "img-circle portfolio">
+            <img src = "static/Home.jpg" class = "img-circle portfolio">
           <p align = "center"><strong>Experiment<strong></p><br>
-            <img src = "Home.jpg" class = "img-circle portfolio">
+            <img src = "static/Home.jpg" class = "img-circle portfolio">
         </div>
         <div class = "col-sm-4">
           <p align = "center"><strong>Graduation<strong></p><br>
-            <img src = "Home.jpg" class = "img-circle portfolio">
+            <img src = "static/Home.jpg" class = "img-circle portfolio">
         </div>
     </div>
   </div>
