--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#myPage">HOME</a></li>
-        <li><a href="#band">ABOUT</a></li>
-        <li><a href="#tour">PORTFOLIO</a></li>
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -48,19 +48,19 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class = "img-responsive" src="Home.jpg" alt="static/Home2.jpg">
+          <img class = "img-responsive" src="static/Home.jpg" alt="static/Home2.jpg">
         </div>
 
         <div class="item">
-          <img class = "img-responsive" src="Home3.jpg" alt="static/Home2.jpg">
+          <img class = "img-responsive" src="static/Home3.jpg" alt="static/Home2.jpg">
         </div>
 
         <div class="item">
-          <img class = "img-responsive" src="Home.jpg" alt="static/Home2.jpg">
+          <img class = "img-responsive" src="static/Home.jpg" alt="static/Home2.jpg">
         </div>
 
         <div class="item">
-          <img class = "img-responsive" src="Home.jpg" alt="static/Home2.jpg">
+          <img class = "img-responsive" src="static/Home.jpg" alt="static/Home2.jpg">
         </div>
       </div>
 
@@ -79,8 +79,7 @@
 
 <div id="band" class="container text-center">
   <h3>About</h3>
-  <p><em>I am fat</em></p>
-  <p>I am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fatI am fat.</p>
+  <p><em>About Alexander Park</em></p>
   <br>
   <p algin = "center"> <strong> Alexander Park <strong> </p>
   <img src = "static/AlexPark.jpg" class = "img-circle" height = "200" width = "200"> 
