--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel = "stylesheet" type = "text/css" href = "static/style.css">
+  <link rel = "stylesheet" type = "text/css" href = "../static/style.css">
   <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -26,9 +26,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#home">HOME</a></li>
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#myCarousel">HOME</a></li>
+        <li><a href="#band">ABOUT</a></li>
+        <li><a href="#tour">PORTFOLIO</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -48,19 +48,19 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class = "img-responsive" src="static/Home.jpg" alt="static/Home2.jpg">
+          <img class = "img-responsive" src="../static/Home.jpg" alt="../static/Home2.jpg">
         </div>
 
         <div class="item">
-          <img class = "img-responsive" src="static/Home3.jpg" alt="static/Home2.jpg">
+          <img class = "img-responsive" src="../static/Home3.jpg" alt="../static/Home2.jpg">
         </div>
 
         <div class="item">
-          <img class = "img-responsive" src="static/Home.jpg" alt="static/Home2.jpg">
+          <img class = "img-responsive" src="../static/Home.jpg" alt="../static/Home2.jpg">
         </div>
 
         <div class="item">
-          <img class = "img-responsive" src="static/Home.jpg" alt="static/Home2.jpg">
+          <img class = "img-responsive" src="../static/Home.jpg" alt="../static/Home2.jpg">
         </div>
       </div>
 
@@ -82,7 +82,7 @@
   <p><em>About Alexander Park</em></p>
   <br>
   <p algin = "center"> <strong> Alexander Park <strong> </p>
-  <img src = "static/AlexPark.jpg" class = "img-circle" height = "200" width = "200"> 
+  <img src = "../static/AlexPark.jpg" class = "img-circle" height = "200" width = "200"> 
 
 </div>
 
@@ -93,19 +93,19 @@
       <div class = "row">
         <div class = "col-sm-4">
           <p align = "center"><strong>Landscape<strong></p><br>
-            <img src = "static/Home.jpg" class = "img-circle portfolio">
+            <img src = "../static/Home.jpg" class = "img-circle portfolio">
           <p align = "center"><strong>UC Davis<strong></p><br>
-            <img src = "static/Home.jpg" class = "img-circle portfolio">
+            <img src = "../static/Home.jpg" class = "img-circle portfolio">
         </div>
         <div class = "col-sm-4">
           <p align = "center"><strong>Portraits<strong></p><br>
-            <img src = "static/Home.jpg" class = "img-circle portfolio">
+            <img src = "../static/Home.jpg" class = "img-circle portfolio">
           <p align = "center"><strong>Experiment<strong></p><br>
-            <img src = "static/Home.jpg" class = "img-circle portfolio">
+            <img src = "../static/Home.jpg" class = "img-circle portfolio">
         </div>
         <div class = "col-sm-4">
           <p align = "center"><strong>Graduation<strong></p><br>
-            <img src = "static/Home.jpg" class = "img-circle portfolio">
+            <img src = "../static/Home.jpg" class = "img-circle portfolio">
         </div>
     </div>
   </div>
