--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
   <p><em>About Alexander Park</em></p>
   <br>
   <p algin = "center"> <strong> Alexander Park <strong> </p>
-  <img src = "../static/AlexPark.jpg" class = "img-circle" height = "200" width = "200"> 
+  <img src = "../static/img/AlexPark.jpg" class = "img-circle" height = "200" width = "200"> 
 
 </div>
 
